--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,30 +1,46 @@
 <head>
-    <meta charset ="utf-8">
+    <meta charset="utf-8">
 </head>
 
 <body>
 这是首页
-<input type = "text" id = "tweetInput">
+<input type="text" id="tweetInput">
 <button onclick="sendTweet()">发送</button>
-<div id = "timeline">
-
-</div>
-    <script>
-        function sendTweet(){
-            let textq = document.getElementById("tweetInput").value;
-            alert(textq);
-            fetch("/tweet",{
-                method:"POST",
-                body:textq,
-                headers:{"Content-type":"text/plain"}
-            }).then(()=>window.location.reload())
-        }
-        window.onload = function(){
-               fetch("/timeline")
-                        .then((response)=>response.json())
-                        .then((data)=>{
-                            document.getElementById("timeline").innerHTML = data.join("<br>");
-                        })
-        }
-    </script>
+<h1>
+    所有推文
+</h1>
+<div id="timelineall"></div>
+<h1>
+    我的推文
+</h1>
+<div id="timeline"></div>
+<script>
+    function sendTweet(){
+        let data = {};
+        let textq = document.getElementById("tweetInput").value;
+        data.content = textq;
+        alert(textq);
+        fetch("/tweet",{
+            method:"POST",
+            body:JSON.stringify(data),
+            headers:{"Content-Type":"application/json"},
+            credentials:"include"
+        }).then(()=>window.location.reload())
+    }
+    window.onload = function(){
+        fetch("/timeline",{
+                method:"GET",
+                credentials:"include"
+         })
+         .then((response)=>response.json())
+          .then((data)=>{
+                document.getElementById("timeline").innerHTML = data.join("<br>");
+         });
+         fetch("/timelineall")
+            .then(r=>r.json())
+            .then(data=>{
+                document.getElementById("timelineall").innerHTML = data.join("<br>");
+         });
+    }
+</script>
 </body>
