--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -18,12 +18,18 @@
             body:JSON.stringify({
                 username:username,
                 password:password
-            })
+            }),
+            credentials:"include"
         })
         .then(response=>response.text())
-        .then(msg=>alert(msg))
+        .then(msg=>{
+            if(msg === "OK"){
+                window.location.href = "index.html";
+            }else{
+                alert(msg);
+                }
+        });
     }
-
   </script>
 </body>
 </html>
