--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -8,6 +8,7 @@
   <input type = "text" id = "id"><br>
   <input type = "password" id = "password"><br>
   <button onclick="login()">登录</button>
+  <button onclick="window.location.href='register.html'">注册</button>
   <script>
     function login(){
         let username = document.getElementById("id").value;
